resources/app-sre/app-interface-staging/app-interface.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: app-interface
  name: app-interface-stg
spec:
  host: app-interface.staging.devshift.net
  to:
    kind: Service
    name: app-interface-nginx-gate
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
